bouton cancel et create list

--- a/src/app/create-list/create-list.component.html
+++ b/src/app/create-list/create-list.component.html
@@ -39,7 +39,8 @@
     </table>
 
     <button id="sendNewList" class="btn btn-sm btn-success float-right" [disabled]="!createListForm.valid">Create</button>
-    <button id="cancelNewList" class="btn btn-sm btn-danger float-right">Cancel</button>
 
 </form>
+    <button id="cancelNewList" class="btn btn-sm btn-danger float-right"><a class="text-light" href="/lists">Cancel</a></button>
+
 </div>
