--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,6 +1,10 @@
+<div class="col text-center">
+    <button class="btn btn-light" [routerLink]="['/create-list']">Create a new list</button>
+</div>
 <ul>
     <li *ngFor="let list of lists">
         <a [routerLink]="['/lists', list.id]">{{ list.name }}</a>
         <p>{{ list.description }}</p>
     </li>
 </ul>
+
