--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -6,6 +6,10 @@
   margin-right: 25px;
 }
 
+.navbar-dark .navbar-nav .is-active {
+    color: #097ce7;
+}
+
 #searchBlock{
     margin-top:1vh;
     margin-right: 5vw;
