--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,22 +10,22 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul id="nav" class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/animes']">ANIMES</a>
+                <a class="nav-link" [routerLink]="['/animes']" routerLinkActive="is-active">ANIMES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/lists']">LISTS</a>
+                <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="is-active">LISTS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated">LOGIN</a>
-                <a class="nav-link" (click)="logoutUser()" *ngIf="isUserAuthenticated">LOGOUT</a>
+                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated" routerLinkActive="is-active">LOGIN</a>
+                <a class="nav-link" (click)="logoutUser()" *ngIf="isUserAuthenticated" routerLinkActive="is-active">LOGOUT</a>
             </li>
             <li class="nav-item" *ngIf="!isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/register']">SIGN UP</a>
+                <a class="nav-link" [routerLink]="['/register']" routerLinkActive="is-active">SIGN UP</a>
             </li>
             <li class="nav-item" *ngIf="isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/account']">MY ACCOUNT</a>
+                <a class="nav-link" [routerLink]="['/account']" routerLinkActive="is-active">MY ACCOUNT</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchSubmit()">
