--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,16 +17,7 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/lists']">LISTS</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated">LOGIN</a>
-                <a class="nav-link" (click)="logoutUser()" *ngIf="isUserAuthenticated">LOGOUT</a>
-            </li>
-            <li class="nav-item" *ngIf="!isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/register']">SIGN UP</a>
-            </li>
-            <li class="nav-item" *ngIf="isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/account']">MY ACCOUNT</a>
-            </li>
+
         </ul>
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchSubmit()">
             <div class="input-group mb-3" id="searchBlock">
@@ -45,5 +36,21 @@
                 </div>
             </div>
         </form>
+        <ul class="navbar-nav ">
+            <li class="nav-item" *ngIf="!isUserAuthenticated">
+                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated">LOGIN</a>
+            </li>
+            <li class="nav-item" *ngIf="!isUserAuthenticated">
+                <a class="nav-link" [routerLink]="['/register']">SIGN UP</a>
+            </li>
+        </ul>
+
+        <div ngbDropdown class="d-inline-block" *ngIf="isUserAuthenticated">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle><i class="fa fa-user"></i> {{  username}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-menu dropdown-menu-right">
+                <button ngbDropdownItem class="btn-nav-link"><a class="nav-link dropdown-nav-link" [routerLink]="['/account']">MY ACCOUNT</a></button>
+                <button ngbDropdownItem class="btn-nav-link"><a class="nav-link dropdown-nav-link"  (click)="logoutUser()" *ngIf="isUserAuthenticated" [routerLink]="['/home']">LOGOUT</a></button>
+            </div>
+        </div>
     </div>
 </nav>
