--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,22 +10,12 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul id="nav" class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/animes']">ANIMES</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/lists']">LISTS</a>
+                <a class="nav-link" [routerLink]="['/animes']" routerLinkActive="is-active">ANIMES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated">LOGIN</a>
-                <a class="nav-link" (click)="logoutUser()" *ngIf="isUserAuthenticated">LOGOUT</a>
-            </li>
-            <li class="nav-item" *ngIf="!isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/register']">SIGN UP</a>
-            </li>
-            <li class="nav-item" *ngIf="isUserAuthenticated">
-                <a class="nav-link" [routerLink]="['/account']">MY ACCOUNT</a>
+                <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="is-active">LISTS</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchSubmit()">
@@ -45,5 +35,21 @@
                 </div>
             </div>
         </form>
+        <ul class="navbar-nav ">
+            <li class="nav-item" *ngIf="!isUserAuthenticated">
+                <a class="nav-link" [routerLink]="['/login']" *ngIf="!isUserAuthenticated" routerLinkActive="is-active">LOGIN</a>
+            </li>
+            <li class="nav-item" *ngIf="!isUserAuthenticated">
+                <a class="nav-link" [routerLink]="['/register']" routerLinkActive="is-active">SIGN UP</a>
+            </li>
+        </ul>
+
+        <div ngbDropdown class="d-inline-block" *ngIf="isUserAuthenticated">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle><i class="fa fa-user"></i> {{  username}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-menu dropdown-menu-right">
+                <button ngbDropdownItem class="btn-nav-link"><a class="nav-link dropdown-nav-link" [routerLink]="['/account']">MY ACCOUNT</a></button>
+                <button ngbDropdownItem class="btn-nav-link"><a class="nav-link dropdown-nav-link"  (click)="logoutUser()" *ngIf="isUserAuthenticated" [routerLink]="['/home']">LOGOUT</a></button>
+            </div>
+        </div>
     </div>
 </nav>
