accept all types of image

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -15,7 +15,7 @@
                             <h5 class="mb-2 text-primary">About</h5>
                             <p>{{currentUser.bio}}</p>
                         </div>
-                        <input type="file" (change)="fileChange($event)" placeholder="Upload file" accept=".webp,.png,.jpeg,.jpg">
+                        <input type="file" (change)="fileChange($event)" placeholder="Upload file" accept="image/*">
                     </div>
                 </div>
             </div>
