--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -6,8 +6,11 @@
                     <div class="account-settings">
                         <div class="user-profile">
                             <div class="user-avatar">
-                                <img *ngIf="profilePicture !== undefined" src="data:image/webp;base64,{{profilePicture.content}}" alt="profile image" onclick="document.getElementById('uploadImage').click()" />
-                                <input id="uploadImage" type="file" (change)="fileChange($event)" placeholder="Upload file" accept="image/*">
+                                <img *ngIf="profilePicture !== undefined"
+                                     src="data:image/webp;base64,{{profilePicture.content}}" alt="profile image"
+                                     onclick="document.getElementById('uploadImage').click()"/>
+                                <input id="uploadImage" type="file" (change)="fileChange($event)"
+                                       placeholder="Upload file" accept="image/*">
                             </div>
                             <h5 class="user-name">{{ currentUser.username}}</h5>
                             <h6 class="user-email">{{ currentUser.email }}</h6>
