--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -64,4 +64,44 @@
             </div>
         </div>
     </div>
+
+    <!-- Partie affichage des commentaires -->
+        <div class="row d-flex justify-content-center">
+
+            <div [ngClass]="currentUser ? 'col-sm-6 col-md-6 col-6 pb-6' : 'col-sm-8 col-md-8 col-8 pb-8'" >
+                <h1>Comments</h1>
+                <div *ngFor="let comment of comments ; let index = index" [ngClass]="'index%2===0 ? comment mt-4 text-justify float-left : text-justify darker mt-4 float-right'">  <img src="https://i.imgur.com/yTFUilP.jpg" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>{{comment.user_id}}</h4> <span>- 20 October, 2018</span> <br>
+                    <p>{{comment.comment}}</p>
+                </div>
+                <!--<div class="comment mt-4 text-justify float-left"> <img src="https://i.imgur.com/yTFUilP.jpg" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>Jhon Doe</h4> <span>- 20 October, 2018</span> <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                </div>
+                <div class="text-justify darker mt-4 float-right"> <img src="https://i.imgur.com/CFpa3nK.jpg" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>Rob Simpson</h4> <span>- 20 October, 2018</span> <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                </div>
+                <div class="comment mt-4 text-justify"> <img src="https://i.imgur.com/yTFUilP.jpg" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>Jhon Doe</h4> <span>- 20 October, 2018</span> <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                </div>
+                <div class="darker mt-4 text-justify"> <img src="https://i.imgur.com/CFpa3nK.jpg" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>Rob Simpson</h4> <span>- 20 October, 2018</span> <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                </div>-->
+            </div>
+
+            <!-- Partie post commentaire -->
+            <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4" >
+                <form id="algin-form" (ngSubmit)="sendComment()" [formGroup]="commentForm   ">
+                    <div class="form-group">
+                        <h1>Leave a comment</h1> <label for="message">Message</label> <textarea name="msg" id="message" cols="30" rows="5" class="form-control" formControlName="comment" style="background-color: black;"></textarea>
+                    </div>
+                    <div class="form-group"> <button type="submit" class="btn btn-primary">Post Comment</button> </div>
+                </form>
+            </div>
+        </div>
 </div>
+
+
