# Conflicts: #	src/app/app-routing.module.ts #	src/app/app.module.ts #	src/app/list-create/list-create.component.html #	src/app/list-create/list-create.component.ts #	src/app/mylists/mylists.component.html

--- a/src/app/list-create/list-create.component.html
+++ b/src/app/list-create/list-create.component.html
@@ -7,7 +7,8 @@
         <input required="true" formControlName="name" placeholder="Enter name" type="text" id="listName"
                class="form-control">
         <label for="listDescription">Description</label>
-        <textarea formControlName="description" required="true" placeholder="Enter description" type="text"
+        <textarea id="listDescription" formControlName="description" required="true" placeholder="Enter description"
+                  type="text"></textarea>
         <div class="custom-control custom-switch">
             <input type="checkbox" class="custom-control-input" id="privateChoice">
             <label class="custom-control-label" for="privateChoice">Private</label>
