--- a/src/app/mylists/mylists.component.html
+++ b/src/app/mylists/mylists.component.html
@@ -1,5 +1,5 @@
 <div class="col text-center">
-    <button class="btn btn-light" [routerLink]="['/create-list']">Create a new list</button>
+    <button class="btn btn-light" [routerLink]="['/list-create']">Create a new list</button>
 </div>
 <ul>
     <li *ngFor="let list of lists">
