--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <ngx-spinner [visible]="spinner" [config]="spinnerConfig"></ngx-spinner>
     <div class="row gutters">
         <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
             <div class="card h-100">
