get custom lists in all lists and show add to custom lists only when user has at least one list

--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
 
-                <div class="input-group mb-3" id="custom">
+                <div class="input-group mb-3" id="custom" *ngIf="userCustomLists.length!==0">
                     <label for="optionSelectCustom"></label>
                     <select name="basicList"
                             class="custom-select custom-select-sm optionSelect"
