remove errors related to list length

--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -34,7 +34,7 @@
                         </button>
                     </div>
                 </div>
-                <div *ngIf="userCustomLists.length===0">
+                <div *ngIf="!hasCustom">
                     <a [routerLink]="['/list-create']">
                         <button type="button" class="btn btn-primary btn-lg">Create a custom list</button>
                     </a>
