--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,25 +1,19 @@
 <body id="body">
-<div class="container">
+<div *ngIf="data !== undefined" class="container">
     <div class="row">
         <div class="col-md-8">
-            <!-- PARTIE DEBUT ARTICLES -->
             <div id="head">
-                <h1>Article Title</h1>
-                <label>Publié le 23/04/2021 à 20:00, mis à jour le 01/05/2021 à 10:02</label>
-                <p>
-                    Quelques jours avant le lancement de NieR Replicant ver.1.22474487139... sur PC, PlayStation 4, Xbox One et Xbox Series X|S, Yosuke Saito, le producteur du jeu, annonçait que la version améliorée de l'action-RPG NieR allait recevoir du contenu gratuit peu après son lancement. La promesse a bien évidemment été tenue !
-                </p>
-                <img src="https://image.jeuxvideo.com/medias-md/161918/1619182638-6916-artwork.png">
+                <h1>{{data.title}}</h1>
+                <label>Publié le {{data.created_at}}</label>
+                <p>{{data.body}}</p>
+                <img *ngIf="data.cover !== undefined" src="data:image/webp;base64,{{data.cover.content}}" alt="article image"/>
             </div>
-            <!-- PARTIE CONTENU PRINCIAL ARTICLES -->
             <div id="mainContent">
-                En effet, dès maintenant, les joueurs de NieR Replicant ver.1.22474487139... peuvent se rendre sur la boutique numérique de leur plateforme préférée pour récupérer le pack 4 YoRHa. Disponible gratuitement, ce tout nouveau pack rend hommage au jeu NieR Automata en dévoilant quatre costumes ainsi que quatre armes aux couleurs du chef-d'oeuvre de 2017.
-                À noter qu'il est nécessaire d'installer le dernier patch de NieR Replicant ver.1.22474487139... pour pouvoir profiter de ce nouveau pack gratuit.
+                {{data.body}}
             </div>
-            <!-- PARTIE AUTEUR ARTICLES -->
             <div id="author">
                 <img class="rounded-circle d-inline " src="https://image.jeuxvideo.com/avatar-sm/a/n/antistar-1570009637-130dd54464160bf26c2c6166e64f33c9.jpg">
-                <p class="d-inline p-2">Par Antistar, Rédacteur onlyweebs.com</p>
+                <p class="d-inline p-2">Par {{data.author.firstname}} {{data.author.lastname}}, Rédacteur onlyweebs.com</p>
             </div>
         </div>
 
