--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,6 @@
     padding-top: 1vh;
     padding-bottom: 1vh;
     background-size: cover;
-
 }
 
 footer {
@@ -19,4 +18,11 @@ footer {
 i {
     color: white;
     background-color: white;
+}
+
+@media screen and (max-width: 576px) {
+    #router {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
