--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-8">
             <div id="head">
                 <h1>{{data.title}}</h1>
-                <label>Publié le {{data.created_at}}</label>
+                <label>Publié le {{data.created_at  | date: 'dd/MM/yyyy'}}</label>
                 <p>{{data.body}}</p>
                 <img *ngIf="data.cover !== undefined" src="data:image/webp;base64,{{data.cover.content}}" alt="article image"/>
             </div>
